@@ -1,3 +1,7 @@
+2005-11-14  Joe English  <jenglish@users.sourceforge.net>
+	* library/bgerror.tcl: Truncate error messages at 45 characters
+	instead of 30 [#1224235].
+
 2005-11-14  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* generic/tkSelect.c (TkSelDefaultSelection): Test select-9.5
